--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -42,6 +42,7 @@ body{
     align-items: center;
     max-width: 830px;
     width: 50%;
+    padding-right: 17px;
 
 }
 .input-search{
@@ -52,6 +53,8 @@ body{
     padding-bottom: 12px;
     padding-left: 23px;
     padding-right: 23px;
+    width: 100%;   
+    /* border-radius: 50%; */
 }
 .button-search{
     padding: 0;
@@ -59,5 +62,33 @@ body{
     border: none;
     width: 19px;
     height: 19px;
-    margin-right: 17px;
+    cursor: pointer;
+}
+.icon-search{
+    width: 19px;
+    height: 19px;
+}
+.icons{
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+.icons-link{
+    text-decoration: none;
+    opacity: 0.24;
+}
+.icons-link:hover{
+    opacity: 0.8;
+}
+.icons-link:not(:last-child){
+    margin-right: 50px;
+}
+.user{
+    padding: 0;
+    margin-left: 45px;
+}
+.user-img{
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
 }
